src/edu/itsco/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package edu.itsco;
import java.util.ArrayList;

public class Parser implements ParserConstants {
  public static ArrayList< Variable > listaVariables;
  public static void main(String args []) throws ParseException, SemanticException
  {
    listaVariables = new ArrayList<Variable >();
    Parser parser = new Parser(System.in);
    try {
                System.out.println("Compilador.");
        parser.principal();
        System.out.println("Compilaci\u00f3n correcta.");
       }catch(Exception ex) {
                                System.err.println(ex.getMessage());
          }


     }
     private static void agregarVariable(Variable variable) throws SemanticException{
          if(listaVariables.contains(variable)){
            throw new SemanticException(variable, SemanticException.VARIABLE_DUPLICADA);
     }else {
                listaVariables.add(variable);
          }
     }

     private static void existeVariable(String id) throws SemanticException {
       Variable v = new Variable();
       v.setId(id);
       if(!listaVariables.contains(v)) {
         throw new SemanticException(v,SemanticException.VARIABLE_NO_DEFINIDA);

         }

       }

  static final public void principal() throws ParseException, SemanticException {
    jj_consume_token(INICIO);
    jj_consume_token(ID);
    label_1:
    while (true) {
      sentencias();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
      case IMPRIMIR:
      case LEER:
      case SI:
      case PARA:
      case MIENTRAS:
      case HACER:
      case ID:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(FIN);
  }

  static final public void sentencias() throws ParseException, SemanticException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      declararVariable();
      break;
    case IMPRIMIR:
      gramaticaImprimir();
      break;
    case LEER:
      gramaticaLeer();
      break;
    case ID:
      gramaticaAsignacion();
      break;
    case SI:
      gramaticaSi();
      break;
    case MIENTRAS:
      gramaticaMientras();
      break;
    case HACER:
      gramaticaHacer();
      break;
    case PARA:
      gramaticaPara();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declararVariable() throws ParseException, SemanticException {
  Token id;
  Token tipoDato;
  boolean inicializada = false;
    jj_consume_token(VAR);
    id = jj_consume_token(ID);
    tipoDato = tipoDato();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IGUAL:
      jj_consume_token(IGUAL);
      valor();
                                                                    inicializada = true;
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
          Variable var = new Variable(id.image,tipoDato.image);
          var.setEstaInicializada(inicializada);
          agregarVariable(var);
  }

  static final public Token tipoDato() throws ParseException {
  Token tipoDato;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTERO:
      tipoDato = jj_consume_token(ENTERO);
      break;
    case CADENA:
      tipoDato = jj_consume_token(CADENA);
      break;
    case FLOTANTE:
      tipoDato = jj_consume_token(FLOTANTE);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
           {if (true) return tipoDato;}
    throw new Error("Missing return statement in function");
  }

  static final public void valor() throws ParseException, SemanticException {
Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VALOR_ENTERO:
      jj_consume_token(VALOR_ENTERO);
      break;
    case VALOR_CADENA:
      jj_consume_token(VALOR_CADENA);
      break;
    case VALOR_FLOTANTE:
      jj_consume_token(VALOR_FLOTANTE);
      break;
    case ID:
      id = jj_consume_token(ID);
          existeVariable(id.image);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void gramaticaImprimir() throws ParseException, SemanticException {
    jj_consume_token(IMPRIMIR);
    jj_consume_token(AP);
    valor();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUMA:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(SUMA);
      valor();
    }
    jj_consume_token(CP);
  }

  static final public void gramaticaLeer() throws ParseException, SemanticException {
  Token id;
    jj_consume_token(LEER);
    jj_consume_token(AP);
    id = jj_consume_token(ID);
    jj_consume_token(CP);
          existeVariable(id.image);
  }

  static final public void gramaticaAsignacion() throws ParseException, SemanticException {
        Token id;
    id = jj_consume_token(ID);
    jj_consume_token(IGUAL);
    opBasica();
          existeVariable(id.image);
  }

  static final public void opBasica() throws ParseException, SemanticException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VALOR_ENTERO:
    case VALOR_FLOTANTE:
    case VALOR_CADENA:
    case ID:
      valor();
      break;
    case AP:
      opParentesis();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUMA:
      case RESTA:
      case MULT:
      case DIV:
      case MOD:
      case POT:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      opAritmetico();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VALOR_ENTERO:
      case VALOR_FLOTANTE:
      case VALOR_CADENA:
      case ID:
        valor();
        break;
      case AP:
        opParentesis();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void opParentesis() throws ParseException, SemanticException {
    jj_consume_token(AP);
    opBasica();
    jj_consume_token(CP);
  }

  static final public void opAritmetico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUMA:
      jj_consume_token(SUMA);
      break;
    case RESTA:
      jj_consume_token(RESTA);
      break;
    case MULT:
      jj_consume_token(MULT);
      break;
    case DIV:
      jj_consume_token(DIV);
      break;
    case MOD:
      jj_consume_token(MOD);
      break;
    case POT:
      jj_consume_token(POT);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void gramaticaSi() throws ParseException, SemanticException {
    jj_consume_token(SI);
    condicion();
    jj_consume_token(ENTONCES);
    sentencias();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SINO:
      jj_consume_token(SINO);
      sentencias();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(FIN);
    jj_consume_token(SI);
  }

  static final public void condicion() throws ParseException, SemanticException {
    condicionSimple();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
      case OR:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      opLogico();
      condicionSimple();
    }
  }

  static final public void condicionSimple() throws ParseException, SemanticException {
    valor();
    opRelacional();
    valor();
  }

  static final public void opLogico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      break;
    case OR:
      jj_consume_token(OR);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void opRelacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MAYOR:
      jj_consume_token(MAYOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IGUAL:
        jj_consume_token(IGUAL);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      break;
    case MENOR:
      jj_consume_token(MENOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IGUAL:
        jj_consume_token(IGUAL);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      break;
    case NOT:
      jj_consume_token(NOT);
      jj_consume_token(IGUAL);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void gramaticaMientras() throws ParseException, SemanticException {
    jj_consume_token(MIENTRAS);
    condicion();
    sentencias();
    jj_consume_token(FIN);
    jj_consume_token(MIENTRAS);
  }

  static final public void gramaticaHacer() throws ParseException, SemanticException {
    jj_consume_token(HACER);
    sentencias();
    jj_consume_token(MIENTRAS);
    condicion();
  }

  static final public void gramaticaPara() throws ParseException, SemanticException {
    jj_consume_token(PARA);
    jj_consume_token(ID);
    jj_consume_token(IGUAL);
    valor();
    jj_consume_token(HASTA);
    valor();
    sentencias();
    jj_consume_token(SIGUIENTE);
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[16];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x193880,0x193880,0x20000000,0x700,0x0,0x200000,0x0,0x7e00000,0x0,0x7e00000,0x8000,0xc0000000,0xc0000000,0x20000000,0x20000000,0x18000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x100,0x100,0x0,0x0,0x1e0,0x0,0x1e2,0x0,0x1e2,0x0,0x0,0x0,0x0,0x0,0x0,0x1,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[41];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 16; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 41; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  }
